--- a/buscador.html
+++ b/buscador.html
@@ -4,138 +4,250 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Stock por Rack y Box</title>
+
+  <!-- ===============================
+       LIBRERÍAS EXTERNAS UTILIZADAS
+       =============================== -->
+  <!-- Librería para leer archivos Excel -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
+  <!-- Librería Chart.js para generar gráficos -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <!-- Iconos FontAwesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <!-- ===============================
+       ESTILOS DE LA INTERFAZ (CSS)
+       =============================== -->
   <style>
+    :root {
+      --primary-color: #04847c;
+      --accent-color: #355fb4;
+      --bg-light: #f3f4f7;
+      --bg-white: #ffffff;
+      --text-color: #333;
+      --border-radius: 12px;
+    }
+
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #f3f4f7, #e8ecf1);
+      background: var(--bg-light);
       margin: 0;
-      padding-top: 70px;
-      color: #333;
+      padding-top: 70px; /* deja espacio para la barra superior */
+      color: var(--text-color);
     }
+
+    /* ---------------------------
+       MENÚ SUPERIOR (NAVBAR)
+       --------------------------- */
     .menu-bar {
       position: fixed;
       top: 0; left: 0; right: 0;
-      background-color: #4a77d4;
+      background-color: var(--primary-color);
       display: flex;
-      justify-content: flex-start;
+      justify-content: space-between;
       align-items: center;
-      padding: 0 20px;
+      padding: 10px 30px;
       z-index: 1000;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
+
     .logo {
-      height: 40px;
-      margin-right: 350px;
+      height: 60px;
     }
-    .menu-bar button {
-      background: none;
-      color: white;
-      padding: 15px 25px;
+
+    /* Grupo de botones de acción (imprimir / etiquetas) */
+    .button-group {
+      display: flex;
+      gap: 12px;
+    }
+
+    .button-group button {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      background-color: #04847c;
+      color: #ffffff;
       border: none;
-      font-size: 1rem;
+      padding: 10px 16px;
+      border-radius: 8px;
+      font-size: 0.95rem;
+      font-weight: 500;
       cursor: pointer;
-      transition: background-color 0.3s;
-      border-right: 1px solid rgba(255,255,255,0.3);
+      box-shadow: 0 2px 6px rgba(4, 132, 124, 0.4);
+      transition: background-color 0.3s, transform 0.2s;
     }
-    .menu-bar button:last-child {
-      border-right: none;
+
+    .button-group button:hover {
+      background-color: #036c67;
+      box-shadow: 0 4px 12px rgba(3, 108, 103, 0.5);
+      transform: translateY(-1px);
     }
-    .menu-bar button:hover {
-      background-color: #355fb4;
-    }
-    h1 {
-      text-align: center;
-      color: #4a4a4a;
-    }
+
+    /* ---------------------------
+       CONTENEDOR PRINCIPAL
+       --------------------------- */
     .container {
-      background-color: white;
-      max-width: 900px;
-      margin: 30px auto;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+      background-color: var(--bg-white);
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 35px;
+      border-radius: var(--border-radius);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
     }
+
+    h1, h2 {
+      text-align: center;
+      color: var(--primary-color);
+      margin-bottom: 20px;
+    }
+
+    /* Input para carga de archivo Excel */
     input[type="file"] {
       display: block;
-      margin: 20px auto 10px auto;
-      padding: 8px;
-    }
-    .search-container {
-      text-align: right;
-      margin-bottom: 10px;
-    }
-    .search-container input {
-      padding: 7px 10px;
+      margin: 20px auto;
+      padding: 10px 15px;
       border: 1px solid #ccc;
       border-radius: 6px;
-      width: 300px;
+      background: #fff;
     }
+
+    /* Buscador */
+    .search-container {
+      display: flex;
+      justify-content: flex-end;
+      margin-bottom: 15px;
+    }
+
+    .search-container input {
+      padding: 8px 12px 8px 36px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      width: 300px;
+      background-image: url('https://cdn-icons-png.flaticon.com/512/54/54481.png');
+      background-size: 16px;
+      background-position: 10px center;
+      background-repeat: no-repeat;
+    }
+
+    /* Panel de estadísticas rápidas */
+    #dashboard {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 20px;
+      margin: 30px 0;
+    }
+
+    .dash-card {
+      background: #eef1f8;
+      border-left: 6px solid var(--primary-color);
+      padding: 20px;
+      border-radius: var(--border-radius);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+      text-align: center;
+      transition: transform 0.2s;
+    }
+
+    .dash-card:hover {
+      transform: translateY(-1px);
+    }
+
+    .dash-card span {
+      display: block;
+      font-size: 1.6rem;
+      font-weight: bold;
+      color: var(--accent-color);
+      margin-top: 6px;
+    }
+
+    /* Tabla de resultados */
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 10px;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px 10px;
-      text-align: center;
-    }
-    th {
-      background-color: #f4f6f8;
-      color: #444;
-    }
-    tr:nth-child(even) {
-      background-color: #f9fafc;
-    }
-    .result-title {
-      text-align: center;
-      margin-top: 40px;
-      font-size: 1.3rem;
-      color: #4a4a4a;
-    }
-    .mensaje {
-      text-align: center;
-      padding: 10px;
-      font-style: italic;
-      color: #888;
+      margin-top: 20px;
+      font-size: 0.95rem;
     }
 
-    /* --- SOLO PARA IMPRESIÓN --- */
+    th {
+      background: var(--primary-color);
+      color: white;
+      padding: 10px;
+      border: none;
+      text-transform: uppercase;
+      font-weight: 600;
+    }
+
+    td {
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+    }
+
+    tr:nth-child(even) {
+      background-color: #f9f9fb;
+    }
+
+    tr:hover {
+      background-color: #eef2f9;
+    }
+
+    .mensaje {
+      text-align: center;
+      padding: 15px;
+      font-style: italic;
+      color: #999;
+    }
+
+    canvas {
+      max-width: 100%;
+      margin-top: 40px;
+    }
+
+    /* Oculta elementos innecesarios al imprimir */
     @media print {
-      body * {
-        visibility: hidden;
-      }
-      #resultTable, #resultTable * {
-        visibility: visible;
-      }
-      #resultTable {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        font-size: 7pt; /* letra muy pequeña */
-      }
-      #resultTable th,
-      #resultTable td {
-        padding: 2px 4px; /* celdas compactas */
+      .menu-bar, input, .search-container, #dashboard, canvas {
+        display: none;
       }
     }
   </style>
 </head>
+
 <body>
+  <!-- ===============================
+       CABECERA SUPERIOR / MENÚ
+       =============================== -->
   <div class="menu-bar">
-    <img src="logo.png" alt="Logo La Emilia" class="logo">
-    <button onclick="imprimirTabla()">Imprimir</button>
-    <button onclick="window.location.href='inyecciones/etiqueta.html'">Etiqueta</button>
+    <img src="Logo.png" alt="Logo La Emilia" class="logo">
+
+    <!-- Botones principales -->
+    <div class="button-group">
+      <button onclick="imprimirTabla()"><i class="fas fa-print"></i> Imprimir</button>
+      <button onclick="window.location.href='inyecciones/etiqueta.html'"><i class="fas fa-tag"></i> Etiquetas</button>
+    </div>
   </div>
 
+  <!-- ===============================
+       CUERPO PRINCIPAL DE LA PÁGINA
+       =============================== -->
   <div class="container">
     <h1>Consulta de Stock por Rack y Box</h1>
+
+    <!-- Carga de archivo Excel -->
     <input type="file" id="fileInput" accept=".xls,.xlsx" />
 
-    <h2 class="result-title">Resultado de Stock por Rack y Box</h2>
+    <!-- Tarjetas de resumen -->
+    <div id="dashboard">
+      <div class="dash-card"><strong>Códigos con Stock:</strong><span id="totalItems">0</span></div>
+      <div class="dash-card"><strong>Stock Total:</strong><span id="totalStock">0</span></div>
+      <div class="dash-card"><strong>Racks Usados:</strong><span id="totalRacks">0</span></div>
+      <div class="dash-card"><strong>Boxs Usados:</strong><span id="totalBoxes">0</span></div>
+    </div>
 
+    <!-- Gráfico de barras dinámico -->
+    <canvas id="stockChart" height="120"></canvas>
+
+    <!-- Tabla principal -->
+    <h2>Resultado de Stock por Rack y Box</h2>
     <div class="search-container">
       <input type="text" id="searchInput" placeholder="Buscar código, descripción, rack o box..." oninput="buscarEnTabla()">
     </div>
@@ -156,37 +268,50 @@
     </table>
   </div>
 
+  <!-- ===============================
+       SCRIPT PRINCIPAL
+       =============================== -->
   <script>
-    let datos = [];
+    // Variables globales
+    let datos = [];          // Datos leídos del archivo Excel
+    let datosFiltrados = []; // Datos que cumplen condiciones (stock > 0)
+    let chart;               // Instancia del gráfico Chart.js
 
+    /* ==================================================
+       LECTURA DEL ARCHIVO EXCEL Y CONVERSIÓN A JSON
+       ================================================== */
     document.getElementById('fileInput').addEventListener('change', function (e) {
       const file = e.target.files[0];
-      if (!file) {
-        console.warn('No se seleccionó archivo');
-        return;
-      }
+      if (!file) return;
+
       const reader = new FileReader();
       reader.onload = function (e) {
         const data = new Uint8Array(e.target.result);
         const workbook = XLSX.read(data, { type: 'array' });
         const sheetName = workbook.SheetNames[0];
         const worksheet = workbook.Sheets[sheetName];
-        datos = XLSX.utils.sheet_to_json(worksheet);
 
+        // Convierte la hoja de Excel a un arreglo de objetos
+        datos = XLSX.utils.sheet_to_json(worksheet);
         calcularStock();
       };
       reader.readAsArrayBuffer(file);
     });
 
+    /* ==================================================
+       PROCESAMIENTO DE DATOS Y CÁLCULO DE STOCK
+       ================================================== */
     function calcularStock() {
-      if (!datos.length) {
-        mostrarMensaje('No hay datos cargados');
-        return;
-      }
+      if (!datos.length) return;
 
       const resultados = {};
+      const racksSet = new Set();
+      const boxesSet = new Set();
       let itemsConStock = 0;
+      let totalStock = 0;
+      datosFiltrados = [];
 
+      // Recorre todas las filas del Excel
       datos.forEach(item => {
         const codigo = (item['Codigo'] || '').toString().trim().toUpperCase();
         const descripcion = (item['Descripción'] || '').toString().trim();
@@ -194,31 +319,34 @@
         const box = (item['Box'] || '').toString().trim().toUpperCase();
         const entrada = Math.abs(parseFloat(item['Entrada de Stock']) || 0);
         const salida = Math.abs(parseFloat(item['Salida de Stock']) || 0);
-
         if (!codigo || !rack || !box) return;
 
+        // Crea clave única por código+rack+box
         const clave = `${codigo}|${rack}|${box}`;
-
         if (!resultados[clave]) {
-          resultados[clave] = {
-            codigo,
-            descripcion,
-            rack,
-            box,
-            stock: 0
-          };
+          resultados[clave] = { codigo, descripcion, rack, box, stock: 0 };
         }
 
-        resultados[clave].stock += entrada;
-        resultados[clave].stock -= salida;
+        // Suma y resta stock según entradas/salidas
+        resultados[clave].stock += entrada - salida;
       });
 
+      // Limpia tabla
       const tbody = document.querySelector('#resultTable tbody');
       tbody.innerHTML = '';
 
+      const chartLabels = [];
+      const chartData = [];
+
+      // Construye tabla y estadísticas
       Object.values(resultados).forEach(item => {
         if (item.stock > 0) {
           itemsConStock++;
+          totalStock += item.stock;
+          racksSet.add(item.rack);
+          boxesSet.add(item.box);
+          datosFiltrados.push(item);
+
           const tr = document.createElement('tr');
           tr.innerHTML = `
             <td>${item.codigo}</td>
@@ -228,33 +356,115 @@
             <td>${item.stock}</td>
           `;
           tbody.appendChild(tr);
+
+          chartLabels.push(item.codigo);
+          chartData.push(item.stock);
         }
       });
 
+      // Si no hay stock positivo, muestra mensaje
       if (itemsConStock === 0) {
         mostrarMensaje('No se encontraron items con stock positivo');
       }
+
+      // Actualiza indicadores
+      document.getElementById('totalItems').textContent = itemsConStock;
+      document.getElementById('totalStock').textContent = totalStock;
+      document.getElementById('totalRacks').textContent = racksSet.size;
+      document.getElementById('totalBoxes').textContent = boxesSet.size;
+
+      // Actualiza gráfico
+      actualizarGrafico(chartLabels, chartData);
     }
 
+    // Muestra mensaje cuando no hay datos
     function mostrarMensaje(msg) {
       const tbody = document.querySelector('#resultTable tbody');
       tbody.innerHTML = `<tr><td class="mensaje" colspan="5">${msg}</td></tr>`;
     }
 
+    /* ==================================================
+       FUNCIÓN DE BÚSQUEDA EN LA TABLA
+       ================================================== */
     function buscarEnTabla() {
       const filtro = document.getElementById('searchInput').value.toLowerCase();
       const filas = document.querySelectorAll('#resultTable tbody tr');
+      const nuevosFiltrados = [];
 
-      filas.forEach(fila => {
+      filas.forEach((fila, index) => {
         const textoFila = fila.innerText.toLowerCase();
-        fila.style.display = textoFila.includes(filtro) ? '' : 'none';
+        const visible = textoFila.includes(filtro);
+        fila.style.display = visible ? '' : 'none';
+        if (visible) nuevosFiltrados.push(datosFiltrados[index]);
+      });
+
+      actualizarDashboard(nuevosFiltrados);
+      actualizarGraficoFiltrado(nuevosFiltrados);
+    }
+
+    /* ==================================================
+       ACTUALIZA LAS TARJETAS DE ESTADÍSTICAS
+       ================================================== */
+    function actualizarDashboard(filtrados) {
+      const racks = new Set();
+      const boxes = new Set();
+      let total = 0;
+
+      filtrados.forEach(item => {
+        total += item.stock;
+        racks.add(item.rack);
+        boxes.add(item.box);
+      });
+
+      document.getElementById('totalItems').textContent = filtrados.length;
+      document.getElementById('totalStock').textContent = total;
+      document.getElementById('totalRacks').textContent = racks.size;
+      document.getElementById('totalBoxes').textContent = boxes.size;
+    }
+
+    /* ==================================================
+       ACTUALIZA EL GRÁFICO CON DATOS FILTRADOS
+       ================================================== */
+    function actualizarGraficoFiltrado(dataSet) {
+      const etiquetas = dataSet.map(d => d.codigo);
+      const valores = dataSet.map(d => d.stock);
+      actualizarGrafico(etiquetas, valores);
+    }
+
+    /* ==================================================
+       FUNCIÓN GENERAL PARA GRAFICAR
+       ================================================== */
+    function actualizarGrafico(labels, data) {
+      const ctx = document.getElementById('stockChart').getContext('2d');
+      if (chart) chart.destroy(); // destruye gráfico anterior
+      chart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+          labels: labels,
+          datasets: [{
+            label: 'Stock por Código',
+            data: data,
+            backgroundColor: 'rgba(72, 116, 190, 0.7)',
+            borderColor: 'rgba(72, 116, 190, 1)',
+            borderWidth: 1
+          }]
+        },
+        options: {
+          responsive: true,
+          scales: { y: { beginAtZero: true } }
+        }
       });
     }
 
+    /* ==================================================
+       FUNCIÓN DE IMPRESIÓN
+       ================================================== */
     function imprimirTabla() {
+      const ocultar = document.querySelectorAll('.menu-bar, input, .search-container, #dashboard, canvas');
+      ocultar.forEach(el => el.style.display = 'none');
       window.print();
+      ocultar.forEach(el => el.style.display = '');
     }
   </script>
 </body>
 </html>
-
