--- a/index.html
+++ b/index.html
@@ -53,16 +53,19 @@
     </style>
 </head>
 <body>
+
     <div class="form-container">
         <h2>Gestión de Stock</h2>
+
         <form id="form">
-            <input placeholder="Escanear tarjeta del operador" id="usuario" required autofocus>
-            <input placeholder="Código" id="codigo" required>
+            <input placeholder="Escanear tarjeta del operador" id="usuario" required autofocus readonly>
+            <input placeholder="Código" id="codigo" required readonly>
             <input placeholder="Descripción" id="descripcion" required readonly>
-            <input type="number" placeholder="Entrada de stock" id="entrada">
-            <input type="number" placeholder="Salida de stock" id="salida">
-            <input placeholder="Rack" id="rack" required>
-            <input placeholder="Box" id="box" required>
+            <input type="number" placeholder="Entrada de stock" id="entrada" readonly>
+            <input type="number" placeholder="Salida de stock" id="salida" readonly>
+            <input placeholder="Rack" id="rack" required readonly>
+            <input placeholder="Box" id="box" required readonly>
+
             <button type="submit">Enviar</button>
         </form>
     </div>
@@ -81,7 +84,38 @@
             entradaInput.disabled = salidaInput.value !== "";
         });
 
-const productos = {
+        /* ============================================================
+           🔒 BLOQUEO TOTAL DE ESCRITURA MANUAL — SOLO PERMITE SCANNER
+           ============================================================ */
+        const inputs = document.querySelectorAll("input");
+
+        inputs.forEach(input => {
+
+            // Bloquea teclas del teclado humano
+            input.addEventListener("keydown", e => {
+                if (e.key === "Tab" || e.key === "Enter") return; 
+                if (e.key.length === 1) e.preventDefault();
+            });
+
+            // Detección de escáner por velocidad
+            let ultimaEntrada = Date.now();
+
+            input.addEventListener("beforeinput", e => {
+                const ahora = Date.now();
+                const intervalo = ahora - ultimaEntrada;
+                ultimaEntrada = ahora;
+
+                // Humano → intervalo > 30 ms
+                if (intervalo > 30) {
+                    e.preventDefault();
+                }
+            });
+        });
+
+        /* ======================
+           📦 BASE DE PRODUCTOS
+           ====================== */
+    const productos = {
 "MPR36":"PORTA TABLERO NUEVO (A) HOMOPOLÍMERO",
 "MPR36-":"PORTA TABLERO PP",
 "MPR46":"CUBRECADENAS (A)",
@@ -395,19 +429,22 @@ const productos = {
 "299053090030":"CDI",
 "299066570000":"REGULADOR DE VOLTAJE",
     };
-document.getElementById('codigo').addEventListener('input', function () {
-    const codigoIngresado = this.value.trim().toUpperCase();
-    const descripcion = productos[codigoIngresado];
-    document.getElementById('descripcion').value = descripcion || '';
-    
-    if (!descripcion && codigoIngresado.length > 3) {
-        document.getElementById('descripcion').placeholder = 'Código no reconocido';
-    } else {
-        document.getElementById('descripcion').placeholder = 'Descripción';
-    }
-});
 
+        document.getElementById('codigo').addEventListener('input', function () {
+            const codigoIngresado = this.value.trim().toUpperCase();
+            const descripcion = productos[codigoIngresado];
+            document.getElementById('descripcion').value = descripcion || '';
 
+            if (!descripcion && codigoIngresado.length > 3) {
+                document.getElementById('descripcion').placeholder = 'Código no reconocido';
+            } else {
+                document.getElementById('descripcion').placeholder = 'Descripción';
+            }
+        });
+
+        /* ===================
+           📤 ENVÍO DE DATOS
+           =================== */
         document.getElementById('form').addEventListener('submit', e => {
             e.preventDefault();
 
@@ -426,15 +463,15 @@ document.getElementById('codigo').addEventListener('input', function () {
                 if (!confirmarSalida) return;
             }
 
-const data = {
-    usuario: document.getElementById('usuario').value, 
-    codigo: document.getElementById('codigo').value,
-    descripcion: document.getElementById('descripcion').value,
-    entrada: entradaValue || "0",
-    salida: salidaNegativa,
-    rack: document.getElementById('rack').value,
-    box: document.getElementById('box').value
-};
+            const data = {
+                usuario: document.getElementById('usuario').value,
+                codigo: document.getElementById('codigo').value,
+                descripcion: document.getElementById('descripcion').value,
+                entrada: entradaValue || "0",
+                salida: salidaNegativa,
+                rack: document.getElementById('rack').value,
+                box: document.getElementById('box').value
+            };
 
             fetch(scriptURL, {
                 method: 'POST',
@@ -451,5 +488,6 @@ const data = {
             .catch(error => alert('Error al enviar: ' + error.message));
         });
     </script>
+
 </body>
 </html>
